src/styles/components/Timer.scss
@use '../vars' as *;

.timer {
  @include flex(center, center, column, 3rem);

  &__clock {
    @include flex(center, center, column);
    font-family: $RobotoFlex;
    font-weight: 200;
    font-size: 20rem;
    line-height: 0.85;
    position: relative;
  }

  &__finishedSessions {
    text-align: center;
    position: absolute;
    font-size: 1.5rem;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    opacity: 0.5;
  }

  // Actions
  &__actions {
    @include flex(center, center, row, 1.6rem);
    position: relative;
  }

  &__btn {
    min-width: 12rem;
  }

  // Current session indicator
  &__currentSession {
    text-transform: capitalize;
    font-size: $RobotoFlex;
    font-size: 1.5rem;
    position: absolute;
    top: -2.5rem;
    left: 50%;
    transform: translateX(-50%);
    opacity: 0.5;
    display: flex;
    gap: 0.5rem;
  }

  &__addTime {
    position: absolute;
    bottom: 50%;
    right: -5.6rem;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 4rem;
    height: 4rem;
    padding: 0;
    border-radius: 50%;
    font-size: 1rem;
    line-height: 1;

    .btn__icon {
      font-size: 1.8rem;
    }
  }

  &__addTimeLabel {
    display: none;
  }
}

@media screen and (max-width: 412px) {
  .timer__clock {
    font-size: 19rem;
  }
}

